# haskell-monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile  MODULE.bazel  README.md  bazel-bin  bazel-haskell-monorepo  bazel-haskell-monorepo-rich  bazel-out  bazel-testlogs  bazel-workspace  environment.json  nike-scraper-infinite-scrolling-enhancement.md  nike-scraper-infinite-scrolling-solution.md  non_module_deps.bzl  setup.sh  shrimp-rules.md  stackage_snapshot.json
.agent/: settings.local.json
.cursor/: Dockerfile  (+2 more)
electron-app/aivika-pendulum-viz/: BUILD.bazel  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.js  styles.css
electron-app/aivika-population-viz/: BUILD.bazel  index.html  main.js  package.json  preload.js  renderer.js  styles.css
electron-app/babylon-example/: BUILD.bazel  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.ts  styles.css
electron-app/hello-world/: BUILD.bazel  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.js  styles.css
electron-app/tic-tac-toe/: BUILD.bazel  README.md  generate_icon.py  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  renderer.js  run-tic-tac-toe.sh  styles.css
electron-app/websocket-client/: BUILD.bazel  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  renderer.js  styles.css
haskell/app/adidas-scraper/: ANTI_FINGERPRINTING.md  BUILD.bazel  Main.hs  README.md  TARGETS.md  example_usage.sh  run_fingerprint_auto_test.sh  run_fingerprint_test.sh  run_with_selenium.sh  stealth_example.sh  test_fingerprint_comprehensive.hs
haskell/app/adidas-scraper/src/Adidas/: AntiFingerprint.hs  Config.hs  Data.hs  FingerprintConfig.hs  NavScraper.hs  ProxyManager.hs  Scraper.hs
haskell/app/aivika-example/: BUILD.bazel  Main.hs  README.md
haskell/app/aivika-example/docs/: 01-overview.md  02-core-simulation.md  03-system-dynamics.md  04-results-and-output.md  05-queue-and-resource-management.md  06-process-and-statistics.md  07-practical-examples-and-index.md  README.md
haskell/app/aivika-pendulum-sim/: BUILD.bazel  Main.hs  README.md
haskell/app/aivika-population-growth/: BUILD.bazel  Main.hs  README.md
haskell/app/bnfc-example/: BUILD.bazel  Calc.cf  Main.hs  QuickCheckTests.hs  README.md
haskell/app/bnfc-multi-grammar/: BUILD.bazel  Expression.cf  Main.hs  README.md  Statement.cf
haskell/app/bnfc-systemverilog-parser/: BUILD.bazel  Main.hs  README.md
haskell/app/bnfc-systemverilog-parser/bnf/: A1_SourceText.cf  A1_SourceText_Simple.cf  A8_Expressions.cf  A8_Expressions_Simple.cf  A9_General.cf  A9_General_Simple.cf  SystemVerilogMinimal.cf  SystemVerilogSimple.cf  SystemVerilogTest.cf  bnf.md
haskell/app/bnfc-systemverilog-parser/tests/minimal/: BUILD.bazel  Main.hs  TestMinimal.hs  run_test.sh  test_input.sv
haskell/app/calculator-mcp/: BUILD.bazel  Descriptions.hs  Main.hs  README.md  Types.hs
haskell/app/hello-world/: BUILD.bazel  Main.hs
haskell/app/langchain-example/: .env.example  BUILD.bazel  Main.hs  README.md
haskell/app/mtl-test/: AdvancedMain.hs  BUILD.bazel  Main.hs  README.md
haskell/app/neural-network/: BUILD.bazel  Main.hs  NeuralNetworkTests.hs  QuickTest.hs
haskell/app/nike-scraper/: BUILD.bazel  Main.hs  README.md  example_usage.sh  run_with_selenium.sh
haskell/app/nike-scraper/src/Nike/: Data.hs  NavScraper.hs  Scraper.hs
haskell/app/rpg-ruleset-query/: BUILD.bazel  Main.hs
haskell/app/rpg-ruleset-query/src/CLI/: Commands.hs  Options.hs  Output.hs
haskell/app/test-http-server/: BUILD.bazel  Main.hs  test.html
haskell/app/tic-tac-toe/: BUILD.bazel  GameLogic.hs  GameLogicQuickCheck.hs  GameLogicTest.hs  Main.hs  README.md  Server.hs  ServerMain.hs
haskell/app/tic-tac-toe-server/: BUILD.bazel  GameLogic.hs  README_TESTS.md  Server.hs  ServerMain.hs  ServerTest.hs  TEST_DOCUMENTATION.md
haskell/app/websocket-server/: BUILD.bazel  Main.hs
haskell/app/websocket-server/src/: Calculator.hs  KeyboardHandler.hs  MessageHandler.hs  Types.hs  WebSocketServer.hs
haskell/app/websocket-server/test/: TestSpec.hs
haskell/libs/agentic-framework/: BUILD.bazel  README.md
haskell/libs/agentic-framework/examples/: BUILD.bazel  DebugAgent.hs  DynamicCapabilityAgent.hs  DynamicWorkflowAgent.hs  ReasoningAgent.hs  ResearchAgent.hs  SimpleAgent.hs  SimpleWorkflow.hs
haskell/libs/agentic-framework/examples/capabilities/: code-review.json  concise.json  friendly.json  reasoning.json  technical.json
haskell/libs/agentic-framework/rust-ffi/: BUILD.bazel  Cargo.toml
haskell/libs/agentic-framework/rust-ffi/src/: lib.rs
haskell/libs/agentic-framework/src/: AgenticFramework.hs
haskell/libs/agentic-framework/src/AgenticFramework/: Agent.hs  Capabilities.hs  Context.hs  Logging.hs  Tool.hs  Types.hs  Workflow.hs
haskell/libs/agentic-framework/src/AgenticFramework/Context/: Summarization.hs  Tokenizer.hs
haskell/libs/agentic-framework/src/AgenticFramework/LLM/: Kimi.hs  Ollama.hs
haskell/libs/agentic-framework/src/AgenticFramework/Logging/: Handlers.hs
haskell/libs/agentic-framework/test/AgenticFramework/: AgentSpec.hs  ContextSpec.hs  LoggingSpec.hs  Main.hs
haskell/libs/agentic-framework/test/Integration/: ContextManagementSpec.hs  ExecutionModeSpec.hs  Main.hs  SimpleAgentSpec.hs
haskell/libs/agentic-framework/test/Property/: AgentProps.hs  Main.hs  SummarizationProps.hs  TokenizerProps.hs
haskell/libs/agentic-framework/test/Workflow/: CapabilitySpec.hs  CompositionSpec.hs  DSLSpec.hs  Main.hs  TypeSafetySpec.hs
haskell/libs/antifingerprinting/: BUILD.bazel
haskell/libs/antifingerprinting/src/: AntiFingerprinting.hs
haskell/libs/antifingerprinting/src/AntiFingerprinting/: Generator.hs  HeaderGenerator.hs  Types.hs
tools/bnfc/: BUILD.bazel  README.md  alex_wrapper.sh  bnfc.bzl  bnfc_deps.bzl  combine_grammar.sh  happy_wrapper.sh
tools/mcp-shrimp-task-manager/: .gitignore  BUILD.bazel  package.json  pnpm-lock.yaml  tsconfig.json
tools/mcp-shrimp-task-manager/src/: index.ts
(+214 files in other folders)
