# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_toolchain_library",
)

# Set all target's visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# haskell_toolchain_library can access builtin GHC packages
# and assign them a bazel target name, so that they
# can be referenced as dependencies.
haskell_toolchain_library(name = "base")

# BNFC tool - selects the appropriate binary for the current platform
alias(
    name = "bnfc",
    actual = select({
        "@platforms//os:windows": "@bnfc_windows//:bnfc_tool",
        "//conditions:default": "@bnfc_linux//:bnfc_tool",
    }),
)

# You can add your own libraries with haskell_library.
# haskell_library(
#     name = "MY_LIBRARY_NAME",
#     src_strip_prefix = "src",
#     srcs = glob(['src/**/*.hs']),
#     deps = [
#         "base_pkg"
#     ],
# )
