module(name = "haskell-monorepo", version = "0.1")

# Haskell
bazel_dep(
    name = "rules_haskell", 
    version = "1.0")

bazel_dep(name = "rules_cc", version = "0.0.17")

# BNFC binary download
bnfc_deps = use_extension("//tools/bnfc:bnfc_deps.bzl", "bnfc_deps")
use_repo(bnfc_deps, "bnfc_linux", "bnfc_windows")

haskell_toolchains = use_extension(
    "@rules_haskell//extensions:haskell_toolchains.bzl",
    "haskell_toolchains",
)

haskell_toolchains.bindists(version = "9.10.1")

non_module_deps = use_extension(
    "//:non_module_deps.bzl",
    "non_module_deps",
)

use_repo(
    non_module_deps,
    "zlib.hs",
    "Cabal",
    "yaml",
    "libyaml",
    "libyaml-clib",
)

################################################################################
# Haskell Stack Snapshots
################################################################################

# Primary snapshot - LTS 24.19 with bytestring-0.10.4.0
stack = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
)

use_repo(
    stack,
    "stackage",
    "stackage-exe",
    "stackage-unpinned",
)

stack.stack_snapshot_json(label = "//:stackage_snapshot.json")
stack.snapshot(name = "lts-24.19")

# Simple packages (no special configuration)
_SIMPLE_PACKAGES = [
    "aeson",
    "aivika-6.1.1",
    "random",
    "mtl",
    "transformers",
    "vector",
    "template-haskell",
    "text",
    "network-uri",
    "wai",
    "warp",
    "http-types",
    "HUnit",
    "scalpel",
    "scalpel-core",
    "webdriver",
    "aeson-pretty-0.8.10",
    "optparse-applicative",
    "QuickCheck",
    "websockets",
    "array",
    "lens",
    "http-conduit",
    "conduit",
    "parsec",
    "tagsoup",
    "directory",
    "filepath",
    "cmark",
    "resourcet",
]

[stack.package(name = pkg) for pkg in _SIMPLE_PACKAGES]

# Packages with setup dependencies
_SETUP_DEP_PACKAGES = {
    "containers": ["@Cabal//:Cabal"],
    "stm": ["@Cabal//:Cabal"],
}

[
    stack.package(name = name, setup_deps = deps)
    for name, deps in _SETUP_DEP_PACKAGES.items()
]

# Packages with extra dependencies (C libraries)
stack.package(
    name = "zlib",
    extra_deps = ["@zlib.hs"],
    flags = ["-non-blocking-ffi", "-pkg-config"],
)

stack.package(
    name = "streaming-commons",
    extra_deps = ["@zlib.hs"],
)

stack.package(
    name = "digest",
    extra_deps = ["@zlib.hs"],
    flags = ["-pkg-config"],
)

# Packages with complex component configurations
stack.package(
    name = "attoparsec",
    components = ["lib", "lib:attoparsec-internal"],
    components_dependencies = {
        "lib:attoparsec": ["lib:attoparsec-internal"],
    },
)

stack.package(
    name = "yaml",
    vendored = "@yaml",
)

stack.package(
    name = "libyaml",
    vendored = "@libyaml",
)

# Versioned packages from LTS
_VERSIONED_LTS_PACKAGES = [
    "data-default-0.8.0.0",
    "tls-2.1.2",
]

[stack.package(name = pkg) for pkg in _VERSIONED_LTS_PACKAGES]

# Packages from Hackage (not in LTS snapshot)
_HACKAGE_ONLY_PACKAGES = [
    # Langchain packages moved to alternative snapshot
]

[stack.package(name = pkg) for pkg in _HACKAGE_ONLY_PACKAGES]

################################################################################
# Alternative Stack Snapshot (for different package versions)
################################################################################
# This snapshot uses LTS 24.19 which includes bytestring-0.12.2.0 by default
# Uses isolate=True to create a separate extension instance (experimental feature)
# Use @stackage_alt//:<package> in BUILD.bazel to reference packages from this snapshot

stack_alt = use_extension(
    "@rules_haskell//extensions:stack_snapshot.bzl",
    "stack_snapshot",
    isolate = True,  # Experimental: creates isolated extension instance
)

use_repo(
    stack_alt,
    stackage_alt = "stackage",
    stackage_alt_exe = "stackage-exe",
    stackage_alt_unpinned = "stackage-unpinned",
)

stack_alt.snapshot(
	name = "lts-24.12"
)

# Minimal package set for alternative snapshot
# Add only packages needed by targets using this alternative snapshot
_ALT_SIMPLE_PACKAGES = [
    "text",
    "containers",
    "aeson",
    "bytestring",
    "http-conduit",
    "vector",
]

[stack_alt.package(name = pkg) for pkg in _ALT_SIMPLE_PACKAGES]

# Langchain and related packages from Hackage (requires newer bytestring)
_ALT_HACKAGE_PACKAGES = []

[stack_alt.package(name = pkg) for pkg in _ALT_HACKAGE_PACKAGES]


# This below resolves
# Error: [Cabal-8010]
# Encountered missing or private dependencies:
#    attoparsec:attoparsec-internal

stack_alt.package(
    name = "ollama-haskell-0.1.3.0"
)

stack_alt.package(
    name = "attoparsec",
    components = ["lib", "lib:attoparsec-internal"],
    components_dependencies = {
        "lib:attoparsec": ["lib:attoparsec-internal"],
    },
)

stack_alt.package(
    name = "langchain-hs-0.0.2.0",
    setup_deps = ["@Cabal//:Cabal"]
)


# Note: LTS-24.19 includes bytestring-0.12.2.0 by default (not 0.10.4.0)
# The primary snapshot (@stackage) has bytestring-0.10.4.0 pinned
# Langchain packages require the newer bytestring version

################################################################################
# Node.js / TypeScript
################################################################################

bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
bazel_dep(name = "aspect_rules_swc", version = "2.4.3")
bazel_dep(name = "aspect_rules_ts", version = "3.6.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.22.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")

# Node.js toolchain configuration
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "16.14.2")

# TypeScript extension
rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# PNPM extension
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# NPM workspaces configuration
_NPM_WORKSPACES = {
    "npm": "//tools/mcp-shrimp-task-manager:pnpm-lock.yaml",
    "npm_tic_tac_toe": "//electron-app/tic-tac-toe:pnpm-lock.yaml",
    "npm_electron_hello_world": "//electron-app/hello-world:pnpm-lock.yaml",
    "npm_electron_babylon_example": "//electron-app/babylon-example:pnpm-lock.yaml",
    "npm_electron_sprite_animation": "//electron-app/sprite-animation:pnpm-lock.yaml",
}

[
    use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
    for _ in _NPM_WORKSPACES.keys()
]

# MCP Shrimp Task Manager
npm_mcp = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm_mcp.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//tools/mcp-shrimp-task-manager:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm_mcp, "npm")

# Electron: Tic-Tac-Toe
npm_ttt = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm_ttt.npm_translate_lock(
    name = "npm_tic_tac_toe",
    pnpm_lock = "//electron-app/tic-tac-toe:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm_ttt, "npm_tic_tac_toe")

# Electron: Hello World
npm_hello = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm_hello.npm_translate_lock(
    name = "npm_electron_hello_world",
    pnpm_lock = "//electron-app/hello-world:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm_hello, "npm_electron_hello_world")

# Electron: Babylon Example
npm_babylon = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm_babylon.npm_translate_lock(
    name = "npm_electron_babylon_example",
    pnpm_lock = "//electron-app/babylon-example:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm_babylon, "npm_electron_babylon_example")

# Electron: Sprite Animation
npm_sprite = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm_sprite.npm_translate_lock(
    name = "npm_electron_sprite_animation",
    pnpm_lock = "//electron-app/sprite-animation:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm_sprite, "npm_electron_sprite_animation")

